# FinalProject

./: CMakeLists.txt
flashcard-program/include/: flashcard.h  forth.h  tracking.h
flashcard-program/src/: flashcard.c  forth.c  main.c  tracking.c
